--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvUsers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/users"
-        android:padding="8dp"
-        />
+        android:padding="8dp" />
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_user"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:src="@drawable/plus"
-        android:id="@+id/add_user"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_margin="32dp"
-        />
+        android:src="@drawable/plus" />
 
 </RelativeLayout>
