--- a/app/src/main/res/menu/activity_main_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer_drawer.xml
@@ -5,34 +5,39 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_current_tasks"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="@string/current_tasks" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_done_tasks"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="@string/done_tasks" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_users"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="@string/users" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_addresses"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="@string/addresses" />
+        <item
+            android:id="@+id/nav_map"
+            android:icon="@drawable/ic_menu_share"
+            android:title="@string/map" />
+        <item
+            android:id="@+id/nav_exit"
+            android:icon="@drawable/ic_menu_share"
+            android:title="@string/exit" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+    <!--<item android:title="Communicate">-->
+        <!--<menu>-->
+
+            <!--<item-->
+                <!--android:id="@+id/nav_send"-->
+                <!--android:icon="@drawable/ic_menu_send"-->
+                <!--android:title="Send" />-->
+        <!--</menu>-->
+    <!--</item>-->
 
 </menu>
