--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
+
         <EditText
             android:id="@+id/write_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/write_name"/>
+            android:hint="@string/write_name" />
     </android.support.design.widget.TextInputLayout>
 
 
@@ -19,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
+
         <EditText
             android:id="@+id/write_pwd"
             android:layout_width="match_parent"
@@ -28,18 +31,18 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        android:layout_margin="8dp"
         android:id="@+id/sign_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_in"/>
+        android:layout_margin="8dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/sign_in"
+        android:textColor="@android:color/white" />
 
     <CheckBox
+        android:id="@+id/inside_ip_checkbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/inside_ip"
-        android:id="@+id/inside_ip_checkbox"/>
+        android:text="@string/inside_ip" />
 
 </LinearLayout>
