пофиксил спиннеры(базовый спиннер)

--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,87 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="?android:listSeparatorTextViewStyle"
     android:layout_width="match_parent"
     android:layout_height="105dp"
-    android:padding="8dp"
-    style="?android:listSeparatorTextViewStyle">
+    android:padding="8dp">
 
     <TextView
+        android:id="@+id/firstLetter"
         android:layout_width="35dp"
         android:layout_height="25dp"
-        tools:text = "К"
-        android:id="@+id/firstLetter"
-        android:textSize="23sp"
-        android:gravity="center"
-        android:textStyle="bold"
         android:layout_marginRight="8dp"
         android:layout_marginTop="5dp"
-        android:textColor="@color/darkGreen"/>
-
-
+        android:gravity="center"
+        android:textColor="@color/darkGreen"
+        android:textSize="23sp"
+        android:textStyle="bold"
+        tools:text="К" />
 
 
     <TextView
-        android:layout_toEndOf="@+id/firstLetter"
-        android:layout_toRightOf="@id/firstLetter"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="100dp"
+        android:layout_toEndOf="@+id/firstLetter"
+        android:layout_toRightOf="@id/firstLetter"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:textColor="@color/darkGreen"
         android:textSize="17sp"
         android:textStyle="bold"
-        android:maxLines="1"
-        android:ellipsize="marquee"
-        android:layout_marginRight="100dp"
-        tools:text = "Поменять трубы на периметре Поменять трубы на периметре Поменять трубы на периметре "
-        android:textColor="@color/darkGreen"/>
+        tools:text="Поменять трубы на периметре Поменять трубы на периметре Поменять трубы на периметре " />
 
     <TextView
-        android:gravity="end"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:id="@+id/user_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:gravity="end"
         android:minWidth="40dp"
-        tools:text = "Не назначена"
-        android:textColor="@color/darkGreen"/>
+        android:textColor="@color/darkGreen"
+        android:textStyle="bold"
+        tools:text="Не назначена" />
 
     <TextView
         android:id="@+id/address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text = "Савушкина, 25"
         android:layout_below="@+id/title"
         android:layout_toEndOf="@+id/firstLetter"
         android:layout_toRightOf="@id/firstLetter"
-        android:textColor="@color/darkGreen"/>
+        android:textColor="@color/darkGreen"
+        tools:text="Савушкина, 25" />
 
 
     <TextView
+        android:id="@+id/body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/address"
-        android:id="@+id/body"
-        android:maxLines="2"
-        android:ellipsize="marquee"
-        android:layout_marginRight="100dp"
         android:layout_marginEnd="100dp"
-        tools:text = "Текст задания, он очень большой, так что приходится изаращаться как только можно, чтобы все"
-        android:textColor="@color/darkGreen"/>
+        android:layout_marginRight="100dp"
+        android:ellipsize="marquee"
+        android:maxLines="2"
+        android:textColor="@color/darkGreen"
+        tools:text="Текст задания, он очень большой, так что приходится изаращаться как только можно, чтобы все" />
 
 
     <TextView
-        android:layout_below="@+id/address"
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text = "Выполнить до\n11/12/17 20:00"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_below="@+id/address"
         android:gravity="center_horizontal"
         android:textColor="@color/darkGreen"
-         />
+        tools:text="Выполнить до\n11/12/17 20:00" />
 
     <!--<Button
         android:layout_width="wrap_content"
