--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1B5E20</color>
+    <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="darkGreen">#1B5E20</color>
-    <color name="lightGreen">#C8E6C9</color>
+    <color name="colorAccent">#FF5722</color>
+    <color name="darkGreen">#2d5e05</color>
+    <color name="lightGreen">#BDBDBD</color>
 </resources>
