--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -7,8 +7,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="4dp"
-    android:paddingTop="4dp"
-    style="?android:listSeparatorTextViewStyle">
+    android:paddingTop="4dp">
 
     <TextView
         android:layout_width="wrap_content"
