--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingBottom="4dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingBottom="4dp"
     android:paddingTop="4dp">
 
     <TextView
+        android:id="@+id/address_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/address_id"
-        tools:text="123"
-        android:textSize="20sp"
-        android:textStyle="bold"
         android:layout_centerVertical="true"
-        android:layout_marginRight="8dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/org_name"
-        android:layout_toRightOf="@id/address_id"
+        android:layout_marginRight="8dp"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:text="ЖСК 15"
-        android:gravity="center_horizontal"/>
+        tools:text="123" />
 
     <TextView
-        android:layout_marginTop="-6dp"
-        android:layout_below="@id/org_name"
+        android:id="@+id/org_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/address"
         android:layout_toRightOf="@id/address_id"
-        tools:text="Ббольшая морская, 9"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:text="ЖСК 15" />
+
+    <TextView
+        android:id="@+id/address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/org_name"
+        android:layout_marginTop="-6dp"
+        android:layout_toRightOf="@id/address_id"
+        android:gravity="center_horizontal"
         android:textSize="18sp"
-        android:gravity="center_horizontal"/>
+        tools:text="Ббольшая морская, 9" />
 
 </RelativeLayout>
