--- a/app/src/main/res/menu/activity_main_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer_drawer.xml
@@ -8,10 +8,10 @@
             android:id="@+id/nav_current_tasks"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/tasks" />
-        <!--<item-->
-            <!--android:id="@+id/nav_done_tasks"-->
-            <!--android:icon="@drawable/ic_menu_gallery"-->
-            <!--android:title="@string/done_tasks" />-->
+        <item
+            android:id="@+id/nav_done_tasks"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/done_tasks" />
         <item
             android:id="@+id/nav_users"
             android:icon="@drawable/ic_menu_slideshow"
