--- a/app/src/main/res/layout/nav_header_main_drawer.xml
+++ b/app/src/main/res/layout/nav_header_main_drawer.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/back"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -23,6 +24,8 @@
         android:id="@+id/tvUserName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        tools:text="test"
+        android:textColor="@android:color/black"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
