--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+    android:id="@+id/llUser"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:gravity="center_vertical">
+    android:orientation="horizontal">
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/users_id"
-        tools:text="10"
-        android:textSize="25sp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_margin="8dp"/>
+        tools:text="10"
+        android:layout_weight="2"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/fio"
-        tools:text="Савченко Александр Владимирович"
-        android:textSize="18sp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:ellipsize="end"
         android:maxLines="1"
-        android:ellipsize="end"/>
+        android:textSize="16sp"
+        android:layout_weight="9"
+        tools:text="Савченко Александр Владимирович" />
 
 
 </LinearLayout>
