--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF5722</color>
     <color name="darkGreen">#2d5e05</color>
     <color name="lightGreen">#BDBDBD</color>
+    <color name="white">#ffffff</color>
 </resources>
