--- a/app/src/main/res/layout/dialog_filter.xml
+++ b/app/src/main/res/layout/dialog_filter.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:id="@+id/rgFilter"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:minWidth="250dp">
 
 
     <RadioButton
@@ -27,31 +28,8 @@
         android:layout_height="wrap_content"
         android:text="@string/all_period"/>
 
-    <LinearLayout
-        android:layout_margin="4dp"
+    <include
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_marginEnd="4dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/cancel"
-            tools:ignore="ButtonStyle"
-            android:layout_marginRight="4dp" />
-
-        <Button
-            android:id="@+id/btnOk"
-            android:layout_marginStart="4dp"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/ok"
-            tools:ignore="ButtonStyle"
-            android:layout_marginLeft="4dp" />
-
-    </LinearLayout>
+        layout="@layout/bottom_buttons" />
 </RadioGroup>
