--- a/app/src/main/res/layout/fragment_directions.xml
+++ b/app/src/main/res/layout/fragment_directions.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <include layout="@layout/bottmom_buttons" />
+            <include layout="@layout/bottom_buttons" />
         </FrameLayout>
     </LinearLayout>
 </ScrollView>
