--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF5722</color>
+    <color name="colorRipple">#fc9574</color>
     <color name="darkGreen">#2d5e05</color>
     <color name="lightGreen">#BDBDBD</color>
     <color name="white">#ffffff</color>
