--- a/app/src/main/res/layout/nav_header_main_drawer.xml
+++ b/app/src/main/res/layout/nav_header_main_drawer.xml
@@ -29,10 +29,11 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-    <!--<TextView-->
-        <!--android:id="@+id/tvSlogan"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Конфуций говорил ЭЭЭ - ты чо епта?" />-->
+    <TextView
+        android:id="@+id/tvVersion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        tools:text="tets"/>
 
 </LinearLayout>
