--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -1,109 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ScrollView01"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <ScrollView
+        android:id="@+id/ScrollView01"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-
-        <android.support.design.widget.TextInputLayout
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <AutoCompleteTextView
-                android:id="@+id/task_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/address" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.v7.widget.AppCompatSpinner
-            android:id="@+id/spinner_importance"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp" />
-
-
-        <android.support.v7.widget.AppCompatSpinner
-            android:id="@+id/spinner_status"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp" />
-
-        <RelativeLayout
-            android:id="@+id/llComment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/hover_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_toLeftOf="@+id/btnMic">
+                android:layout_margin="8dp">
 
-                <EditText
-                    android:id="@+id/task_body"
+                <AutoCompleteTextView
+                    android:id="@+id/task_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:hint="@string/task_body"
-                    android:textColor="@color/darkGreen" />
+                    android:hint="@string/address" />
             </android.support.design.widget.TextInputLayout>
 
-            <ImageButton
-                android:id="@+id/btnMic"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_margin="8dp"
-                android:background="@drawable/round"
-                android:src="@drawable/ic_mic" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        </RelativeLayout>
-
-        <Button
-            android:id="@+id/choose_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:text="@string/choose_date"
-            android:textColor="@android:color/white" />
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/spinner_importance"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp" />
 
 
-        <android.support.v7.widget.AppCompatSpinner
-            android:id="@+id/spinner_users"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp" />
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/spinner_status"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp" />
 
-        <android.support.v7.widget.AppCompatSpinner
-            android:id="@+id/spinner_type"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp" />
+            </LinearLayout>
 
-        <Button
-            android:id="@+id/create_task_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:text="@string/create_task"
-            android:textColor="@android:color/white" />
+            <RelativeLayout
+                android:id="@+id/llComment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    </LinearLayout>
-</ScrollView>
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/hover_comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_toLeftOf="@+id/btnMic">
+
+                    <EditText
+                        android:id="@+id/task_body"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:hint="@string/task_body"
+                        android:textColor="@color/darkGreen" />
+                </android.support.design.widget.TextInputLayout>
+
+                <ImageButton
+                    android:id="@+id/btnMic"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/round"
+                    android:src="@drawable/ic_mic" />
+
+            </RelativeLayout>
+
+            <Button
+                android:id="@+id/choose_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:text="@string/choose_date"
+                android:textColor="@android:color/white" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/spinner_users"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp" />
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/spinner_type"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <android.support.design.widget.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/create_task_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:padding="16dp"
+        android:src="@drawable/ic_done_all"
+        app:srcCompat="@drawable/ic_done_all"
+        tools:ignore="VectorDrawableCompat" />
+</android.support.design.widget.CoordinatorLayout>
